--- a/src/containers/CreateAccount/CreateAccount.scss
+++ b/src/containers/CreateAccount/CreateAccount.scss
@@ -55,7 +55,8 @@
           text-align: left;
         }
         .ant-form-item {
-          margin-bottom: 24px;
+          // margin-bottom: 24px;
+          margin-top: 30px;
           input {
             width: 348px;
             height: 48px;
