--- a/src/Ui/LeftCard/LeftCard.scss
+++ b/src/Ui/LeftCard/LeftCard.scss
@@ -1,6 +1,9 @@
 .left {
     width: 34.1%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #980a2b;
     box-shadow: 0 2px 32px 12px rgba(0, 0, 0, 0.1);
+     @media only screen and (max-width: 767.98px) {
+        min-height: auto
+    }
 }
