--- a/src/Ui/RightCard/RightCard.scss
+++ b/src/Ui/RightCard/RightCard.scss
@@ -2,6 +2,9 @@
     width: 65.9%;
     min-height: 100vh;
     background-color: #ffffff;
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        padding-left: 60px !important
+    }
     @media only screen and (max-width: 767.98px) {
         min-height: auto;
         padding-bottom: 30px !important;
