--- a/src/containers/CreateAccount2/CreateAccount2.scss
+++ b/src/containers/CreateAccount2/CreateAccount2.scss
@@ -1,4 +1,4 @@
-.create_ccount {
+.create_ccount2 {
   display: flex;
   width: 100%;
   .left {
@@ -41,39 +41,57 @@
         font-family: "Poppins-Medium";
       }
     }
-    .create_form {
-      display: flex;
+    .create_form2 {
       border: 1px solid #ececec;
-      width: 627px;
-      height: 273px;
-      justify-content: space-between;
-      align-items: center;
-      padding-left: 24px;
-      padding-right: 24px;
+      width: 396px;
+      height: auto;
+      padding: 40px 24px;
       .ant-form {
+        p {
+          font-size: 16px;
+          font-family: "Poppins-Medium";
+          color: #000000;
+          margin-bottom: 13px;
+          span {
+            font-size: 13px;
+            font-family: "Poppins-Regular";
+          }
+        }
         .ant-form-item-explain-error {
           text-align: left;
+          &:first-of-type,
+          &:nth-of-type(2) {
+            width: 110px !important;
+          }
         }
         .ant-form-item {
-          // margin-bottom: 24px;
-          margin-top: 30px;
-          input {
-            width: 348px;
+          margin-bottom: 24px;
+          display: inline-block;
+          &:nth-of-type(1),
+          &:nth-of-type(2) {
+            margin-right: 8px;
+          }
+          &:last-of-type {
+            margin-bottom: 0px;
+          }
+          input[type="text"] {
+            width: 110px;
             height: 48px;
+
             border: 1px solid #dadcdf;
             text-indent: 15px;
             font-size: 14px;
-
             &::placeholder {
-              color: #434547;
+              color: #5f6367;
             }
             &:focus {
               outline: none;
               box-shadow: none;
             }
           }
-          button {
-            width: 348px;
+
+          .submit {
+            width: 223px;
             height: 48px;
             border-radius: 4px;
             box-shadow: 0 2px 24px 0 rgba(153, 34, 44, 0.32);
@@ -91,44 +109,143 @@
               transform: scale(1);
             }
           }
+          .back {
+            border: none;
+            background: none;
+            color: #99222c;
+            font-size: 14px;
+            font-family: "Poppins-Medium";
+            margin-right: 24px;
+            padding: 0;
+          }
+          .ant-radio-group {
+            width: 100%;
+            display: flex;
+
+            .ant-radio-wrapper {
+              display: inline-block;
+              background: #ffffff;
+              border: 1px solid #dadcdf;
+              border-radius: 3px;
+              width: 169px;
+              height: 56px;
+              line-height: 56px;
+              color: #000000;
+              font-size: 14px;
+              .ant-radio {
+                display: none;
+              }
+              img {
+                width: 26px;
+                height: 36px;
+              }
+              .text {
+                padding-left: 12px;
+                vertical-align: middle;
+              }
+            }
+            .ant-radio-wrapper-checked {
+              border: solid 1px #99222c;
+              background-color: rgba(153, 34, 44, 0.06);
+              font-family: "Poppins-Bold";
+            }
+          }
+        }
+        .ant-select-focused:not(.ant-select-disabled).ant-select-single:not(.ant-select-customize-input)
+          .ant-select-selector {
+          box-shadow: none;
+          outline: none;
+        }
+        .ant-select-selector {
+          width: 110px;
+          height: 48px;
+          border: 1px solid #dadcdf;
+          text-indent: 15px;
+          font-size: 14px;
+          margin-right: 8px;
+          &:focus {
+            outline: none;
+            box-shadow: none;
+          }
+          padding: 0;
+
+          .ant-select-selection-item {
+            line-height: 48px;
+          }
+          .ant-select-selection-placeholder {
+            line-height: 48px;
+            font-size: 14px;
+            padding: 0;
+            text-indent: 15px;
+            color: #5f6367;
+          }
+        }
+        .ant-select-arrow {
+          user-select: none;
+          right: 20px;
+          color: #9e9e9e;
+        }
+        .ant-select-focused {
+          box-shadow: none;
+          border: none;
+        }
+        .ant-select-single.ant-select-show-arrow .ant-select-selection-item {
+          padding: 0;
+          text-indent: 15px;
+        }
+        .select_gender {
+          p {
+            font-size: 14px;
+            margin-top: 0;
+            margin-bottom: 12px;
+          }
+          .ant-form-item {
+            &:first-of-type {
+              margin-bottom: 12px;
+            }
+            &:last-of-type {
+              margin-bottom: 24px;
+            }
+          }
+        }
+        .ant-checkbox-wrapper {
+          color: #000000;
         }
       }
-      .wifi {
-        text-align: center;
+    }
+    .wifi {
+      text-align: center;
+      margin-top: 24px;
+      display: none;
+      img {
+        width: 125px;
+        height: 102px;
+      }
+      p {
+        font-size: 13px;
+        color: #000000;
+        margin-bottom: 8px;
+      }
+      .powrd_by {
+        margin-top: 0px;
+        margin-bottom: 0px;
         img {
-          width: 125px;
-          height: 102px;
+          width: 24px;
+          height: 24px;
+          margin: 0 2px 0 0;
         }
-        p {
-          font-size: 13px;
-          color: #000000;
-          margin-bottom: 8px;
-        }
-        .powrd_by {
-          margin-top: 0px;
-          margin-bottom: 0px;
-          img {
-            width: 24px;
-            height: 24px;
-            margin: 0 2px 0 0;
-          }
-          span {
-            margin: 4px 0 4px 2px;
-            font-size: 11px;
-            color: #198180;
-          }
+        span {
+          margin: 4px 0 4px 2px;
+          font-size: 11px;
+          color: #198180;
         }
       }
     }
   }
 }
-.ant-select-item-option-content {
-  img {
-    width: 24px;
-  }
-}
+
 @media only screen and (max-width: 767.98px) {
-  .create_ccount {
+  .create_ccount2 {
     flex-direction: column;
     .left {
       padding-top: 131px;
@@ -145,7 +262,7 @@
     .right {
       width: 100%;
       padding-top: 16px;
-      padding-left: 24px;
+      padding-left: 16px;
       padding-right: 16px;
       h4 {
         font-size: 24px;
@@ -158,26 +275,64 @@
           font-family: "Poppins-Regular";
         }
       }
-      .create_form {
-        flex-direction: column;
+      .create_form2 {
         width: 100%;
         height: auto;
         border: none;
-        padding-left: 16px;
-        padding-right: 16px;
-        .ant-form {
-          width: 100%;
-          height: auto;
+        padding: 0 !important;
+        .dateof_birth {
+          display: flex;
           .ant-form-item {
-            input {
-              width: 100%;
+            input[type="text"] {
+              width: 122px !important;
             }
-            button {
-              width: 100%;
+          }
+        }
+        .ant-form-item {
+          &:last-of-type {
+            display: block;
+            .ant-form-item-control-input-content {
+              display: flex;
+              justify-content: center;
+            }
+          }
+        }
+        .select_gender {
+          .ant-form-item {
+            .ant-radio-group .ant-radio-wrapper {
+              width: 187px;
+            }
+            :last-of-type {
+              .ant-form-item-control-input-content {
+                display: flex;
+                justify-content: start;
+              }
             }
           }
         }
       }
+      .wifi {
+        display: block;
+      }
     }
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 413.98px) {
+  .create_ccount2
+    .right
+    .create_form2
+    .ant-form
+    .ant-form-item
+    input[type="text"] {
+    width: 105px !important;
+  }
+  .create_ccount2
+    .right
+    .create_form2
+    .ant-form
+    .ant-form-item
+    .ant-radio-group
+    .ant-radio-wrapper {
+    width: 163px;
   }
 }
