--- a/src/containers/CreateAccount/CreateAccount.scss
+++ b/src/containers/CreateAccount/CreateAccount.scss
@@ -20,9 +20,8 @@
     }
   }
   .right {
-    padding-top: 24.9vh;
+    padding-top: 20vh;
     padding-left: 146px;
-    padding-bottom: 34.1vh;
     h4 {
       color: #000000;
       font-family: "Poppins-SemiBold";
@@ -52,6 +51,9 @@
       padding-right: 24px;
       .ant-form {
         .ant-form-item-explain-error {
+          font-size: 11px;
+          font-weight: 700;
+
           text-align: left;
         }
         .ant-form-item {
