--- a/src/containers/CreateAccount2/CreateAccount2.scss
+++ b/src/containers/CreateAccount2/CreateAccount2.scss
@@ -20,9 +20,9 @@
     }
   }
   .right {
-    padding-top: 24.9vh;
+    padding-top: 17vh;
     padding-left: 146px;
-    padding-bottom: 34.1vh;
+    padding-bottom: 20px;
     h4 {
       color: #000000;
       font-family: "Poppins-SemiBold";
@@ -59,6 +59,8 @@
         }
         .ant-form-item-explain-error {
           text-align: left;
+          font-size: 11px;
+          font-weight: 700;
           &:first-of-type,
           &:nth-of-type(2) {
             width: 110px !important;
