--- a/src/containers/EnterPhone/EnterPhone.scss
+++ b/src/containers/EnterPhone/EnterPhone.scss
@@ -141,6 +141,7 @@
           box-shadow: 0 2px 24px 0 rgba(153, 34, 44, 0.32);
           background-color: #980a2b;
           font-size: 18px;
+          border: none;
           color: #fff;
           font-family: "Poppins-Medium";
           touch-action: none !important;
