--- a/src/containers/CreateAccount2/CreateAccount2.scss
+++ b/src/containers/CreateAccount2/CreateAccount2.scss
@@ -71,7 +71,7 @@
           display: inline-block;
           &:nth-of-type(1),
           &:nth-of-type(2) {
-            margin-right: 8px;
+            margin-right: 5%;
           }
           &:last-of-type {
             margin-bottom: 0px;
